--- a/index.html
+++ b/index.html
@@ -19,35 +19,25 @@
         <h3>Confira o clima de uma cidade:</h3>
         <div class="form-input-container">
           <input
-            class=""
             type="text"
             placeholder="Digite o nome da cidade"
             id="cidade-input"
           />
           <button type="submit" id="btnEnviar">
-            Enviar
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
       </div>
-      <div id="weather-data">
+      <div id="weather-data" class="hide">
         <h2>
           <i class="fa-solid fa-location-dot"></i>
           <span id="cidade"></span>
-          <img
-            src=""
-            alt="Bandeira do pais"
-            id="pais"
-          />
+          <img src="" alt="Bandeira do pais" id="pais" />
         </h2>
         <p id="temperatura"><span></span>&deg;C</p>
         <div id="descricao-container">
           <p id="descricao"></p>
-          <img
-            src="https://openweathermap.org/img/wn/01d.png"
-            alt="Condições do tempo"
-            id="weather-icon"
-          />
+          <img src="" alt="Condições do tempo" id="weather-icon" />
         </div>
         <div id="detalhes-container">
           <p id="umidade">
